Fixed imports, and changed to fenixedu-appliance-menu